# ion

./: .gitignore  .gitlab-ci.yml  .travis.yml  0000-template.md  <  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SYNTAX.md  build.rs  build.sh  clippy.toml  garbage  rustfmt.toml  setup.ion  shell.nix  test  test.sh  vendor_config
.github/: ISSUE_TEMPLATE
.gitlab/issue_templates/: bug.md  rfc.md  syntax.md
.gitlab/merge_request_templates/: BREAKING_CHANGE.md  feat.md  fix.md
bash/: distclean.sh  install.sh  version.sh
benches/: builtins.rs  builtins.txt  calls.txt  herestring.ion  statement.rs  terminator.rs  test.ion
ci/: run_benchmark.sh
completions/: _placeholder.toml  cargo.toml  git.toml
debian/: changelog  control  copyright  files  postinst  postinstall  rules
examples/: README.md  advanced_conditions.ion  advanced_conditions.out  alias.ion  array_assignments.ion  array_assignments.out  array_methods.ion  array_methods.out  arrays.ion  arrays.out  arrays_with_braces.ion  arrays_with_braces.out  basic_condition.ion  bench_results.txt  braces.ion  braces.out  builtin_piping.ion  builtin_piping.out  check.params  color_test.ion  command-substitutions.ion  command-substitutions.out  comments.ion  conditionals.ion  conditionals.out  else_if.ion  exists.ion  exists.out  fail.ion  fibonacci.ion  fibonacci.out  fibonacci.sh  fn-root-vars.ion  fn-root-vars.out  fn.ion  fn.out  for.ion  for.out  function_piping.ion  function_piping.out  (+47 more)
examples/advanced/: cpu-model.ion
examples/script_exec/: array_methods.ion  basic_condition.ion  break.ion
fuzz/: Cargo.toml  run_fuzzer.ion
fuzz/fuzz_targets/: parser.rs
ion_braces/: Cargo.toml
ion_builtins/src/: calc.rs  conditionals.rs  echo.rs  test.rs
ion_ranges/: Cargo.toml
ion_ranges/src/: index.rs
manual/: README.md  book.toml
manual/src/: SUMMARY.md  builtins.md  ch01-00-introduction.md  ch02-00-features.md  ch03-00-miscellaneous.md  ch03-01-implicitcd.md  ch03-02-xdg.md  ch03-03-quotation.md  ch03-05-multicomments.md  ch03-07-general.md  ch04-00-variables.md  ch04-01-strings.md  ch04-02-arrays.md  ch04-02-tuples.md  ch04-03-arithmetic.md  ch04-04-arithmetic.md  ch04-05-exporting.md  ch04-05-scopes.md  ch05-00-expansions.md  ch05-04-arithmetic.md  ch05-05-method.md  ch07-00-flow.md  ch07-01-conditionals.md  ch08-00-functions.md  ch08-00-scripts.md  ch08-functions.md  ch09-00-signals.md  ch10-00-jobs.md  ch11-00-builtins.md  ch12-00-builtins.md  ch12-00-examples.md  ch13-00-history.md  features.md  functions.md  general.md  history.md  introduction.md  migrating.md  miscellanious.md  pipelines.md  (+6 more)
members/braces/: Cargo.toml
members/builtins/: Cargo.toml
members/builtins-proc/: Cargo.toml
members/builtins-proc/src/: lib.rs
members/builtins-proc/tests/: test.rs
members/builtins/src/: calc.rs  conditionals.rs  echo.rs  lib.rs  random.rs  test.rs
members/lexers/: Cargo.toml
members/ranges/: Cargo.toml
members/ranges/src/: index.rs  lib.rs  parse.rs  range.rs  select.rs
members/scopes-rs/: Cargo.toml  README.md
members/scopes-rs/src/: lib.rs
members/sys/: Cargo.toml
members/sys/src/: lib.rs
members/sys/src/sys/redox/: mod.rs
members/sys/src/sys/unix/: mod.rs
members/types-rs/: Cargo.toml  README.md
members/types-rs/src/: lib.rs  math.rs  modification.rs  trait_test.rs  types.rs
sh-interrupt/: .cvsignore  Makefile  OBSERVATIONS  QUESTIONS  README  catcher  catcher.c  cpu.c  deopt.sh  enveval.sh  hardguy.c  hash-error.sh  lib.ion  lib.sh  mkdep.sh  test01.ion  test01.sh  test02.sh  test03.ion  test03.sh  test04.ion  test04.sh  test05.ion  test05.sh  test06.sh  test07.ion  test07.sh  test08.ion  test08.sh  test09.sh  test10.ion  test10.sh  test11.ion  test11.sh  test12.ion  test12.sh  test13.sh  test20.sh  test20a.sh  test20b.sh  (+15 more)
sh-interrupt/makestuff/: Makefile1  Makefile2  Makefile3  README  test01.sh  test02.sh
src/: ascii_helpers.rs  builtin.rs  command.rs  completer.rs  directory_stack.rs  expansion.rs  flow_control.rs  function.rs  grammar.rustpeg  history.rs  input_editor.rs  job.rs  lib.rs  main.rs  parser.rs  peg.rs  pipe.rs  status.rs  to_num.rs  tokenizer.rs  types.rs  variables.rs
src/binary/: builtins.rs  completer.rs  designators.rs  history.rs  huponexit.rs  keybindings.rs  lexer.rs  mod.rs  prompt.rs  readln.rs
src/builtins/: README.md  calc.rs  conditionals.rs  echo.rs  exists.rs  functions.rs  ion.rs  is.rs  job_control.rs  man_pages.rs  mod.rs  random.rs  set.rs  source.rs  status.rs  test.rs  time.rs  variables.rs
src/lib/: ascii_helpers.rs  description.md  iter.rs  lib.rs  memory.rs  types.rs
src/parser/: README.md  arguments.rs  assignments.rs  for_expression.rs  grammar.rustpeg  mod.rs  peg.rs  pipelines.rs  quotes.rs  statements.rs
src/shell/: assignments.rs  binary.rs  colors.rs  completer.rs  directory_stack.rs  flags.rs  flow.rs  flow_control.rs  foreground.rs  fork.rs  history.rs  job.rs  job_control.rs  library.rs  mod.rs  pipe.rs  signals.rs  status.rs  variables.rs
src/shell_expand/: braces.rs  mod.rs  variables.rs  words.rs
src/smallstring/: Cargo.toml
src/sys/: redox.rs  unix.rs
testing/: file_with_text  symlink
tests/: README.md  alias.out  and.ion  and.out  arithmetic_vars.ion  arithmetic_vars.out  array_assignments.ion  array_methods.ion  array_methods.out  array_ops.ion  array_ops.out  array_test.ion  array_test.out  array_vars.ion  array_vars.out  arrays.out  arrays_with_braces.ion  arrays_with_braces.out  brace_exp.ion  brace_exp.out  braces.out  builtin_math.ion  builtin_math.out  builtin_piping.out  builtin_set.ion  builtin_set.out  builtin_set_err_exit.ion  builtin_set_err_exit.out  builtin_set_pipe_fail.ion  builtin_set_pipe_fail.out  builtin_status.ion  cmdfile_fail.out  cmdfile_fail.params  color_test.out  command-substitutions.out  comments.ion  comments.out  conditionals_with_set-e.ion  conditionals_with_set-e.out  continue.ion  (+89 more)
tests/advanced/: cpu-model.ion  rxtx-stats.ion
text/: 0000-methods.md  0000-scopes.md  0001-variable-assignments.md  0002-variable-expansions.md  0003-scopes.md
(+245 files in other folders)
