[package]

authors = [
    "Michael Aaron Murphy <mmstickman@gmail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
    "Skyler Berg <skylertheberg@gmail.com>",
    "stratact <stratact1@gmail.com>",
    "AdminXVII <dev.xlheureux@gmail.com>",
    "Hunter Goldstein <hunter.d.goldstein@gmail.com>",
    "jD91mZM2 <me@krake.one>",
    "Agustin Chiappe Berrini <jnieve@gmail.com>",
    "Sag0Sag0 <Sag0Sag0@users.noreply.github.com>",
]
build = "build.rs"
description = "The Ion Shell"
license-file = "LICENSE"
name = "ion-shell"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/ion"
version = "1.0.0-alpha"
edition = "2018"
keywords = ["shell", "script", "program", "config", "configuration"]
categories = ["command-line-utilities", "config"]
documentation = "https://doc.redox-os.org/ion-manual/"

[badges]
gitlab = { repository = "https://gitlab.redox-os.org/redox-os/ion", branch = "master" }
maintenance = { status = "experimental" }

[features]
advanced_arg_parsing = []
man = ["builtins-proc/man"]

[workspace]
members = [ "members/builtins-proc", "members/ranges", "members/scopes-rs", "members/types-rs" ]

[dev-dependencies]
criterion = "0.2"
serial_test = "*"
serial_test_derive = "*"
# window example
piston-ai_behavior = "0.31"
piston_window = "0.100"
piston2d-sprite = "0.55"

[[bench]]
name = "terminator"
harness = false

[[bench]]
name = "statement"
harness = false

[[bench]]
name = "builtins"
harness = false

[[bin]]
name = "ion"
path = "src/main.rs"

[build-dependencies]
version_check = "0.9"

[dependencies]
calculate = { git = "https://gitlab.redox-os.org/redox-os/calc" }
err-derive = "0.1"
glob = "0.3"
itoa = "0.4"
liner = { git = "https://gitlab.redox-os.org/redox-os/liner" }
rand = "0.7"
regex = "1.1"
small = { git = "https://gitlab.redox-os.org/redox-os/small", features = ["std"] }
smallvec = "0.6"
unicode-segmentation = "1.2"
ion-ranges = { version = "0.1", path = "members/ranges" }
scopes = { version = "0.1", path = "members/scopes-rs" }
types-rs = { version = "0.1", path = "members/types-rs" }
builtins-proc = { version = "0.1", path = "members/builtins-proc" }
hashbrown = "0.5"
itertools = "0.8"
lexical = "2.0"
object-pool = "0.3.1"
auto_enums = "0.5.5"
structopt = "^0.2"
atty = "0.2"
permutate = "0.3"
xdg = "2.1"
nix = "0.14"

[target."cfg(all(unix, not(target_os = \"redox\")))".dependencies]
users = "0.9"

[target."cfg(target_os = \"dragonfly\")".dependencies]
errno-dragonfly = "0.1.1"

[lib]
path = "src/lib/lib.rs"

[profile.release]
lto = true
panic = "abort"

# Required to make `cargo vendor` work
[patch.crates-io]
termion = { git = "https://gitlab.redox-os.org/redox-os/termion" }
liner = { git = "https://gitlab.redox-os.org/redox-os/liner" }
