[package]
name = "builtins-proc"
version = "0.1.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
edition = "2018"

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
darling = "0.10"

[dev-dependencies]
ion-shell = { path = "../.." }

[lib]
proc-macro = true

[features]
man = []
