[package]
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Expose author list of Ion Shell as macro"
edition = "2018"
keywords = ["ion", "shell", "builtin"]
license = "MIT"
name = "builtins-proc"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/ion"
version = "0.1.0"

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
darling = "0.10"

[dev-dependencies]
ion-shell = { path = "../.." }

[lib]
proc-macro = true

[features]
man = []
