[package]
name = "ion_builtins"
version = "0.1.0"
authors = ["Michael Murphy <mmstickman@gmail.com>"]
publish = false

[dependencies]
bitflags = "1.0"
calculate = { git = "https://gitlab.redox-os.org/redox-os/calc" }
rand = "0.6.1"
small = { git = "https://gitlab.redox-os.org/redox-os/small", features = ["std"] }
smallvec = "0.6"
