[package]
name = "ion_sys"
version = "0.1.0"
authors = ["Michael Murphy <mmstickman@gmail.com>"]
publish = false

[dependencies]
libc = "0.2"

[target."cfg(all(unix, not(target_os = \"redox\")))".dependencies]
libloading = "0.5"
users = "0.7"

[target."cfg(target_os = \"redox\")".dependencies]
redox_syscall = "0.1"
