[package]
name = "ion_sys"
version = "0.1.0"
authors = ["Michael Murphy <mmstickman@gmail.com>"]
publish = false

[dependencies]
libc = "0.2"

[target."cfg(all(unix, not(target_os = \"redox\")))".dependencies]
users = "0.8.1"

[target."cfg(target_os = \"redox\")".dependencies]
redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall.git", branch = "relibc" }
