[package]
name = "types-rs"
version = "0.1.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
edition = "2018"
description = "A type for dynamically typed variables."
license = "MIT"
repository = "https://gitlab.redox-os.org/redox-os/ion"
keywords = ["types", "variables", "dynamic typing", "json"]
readme = "README.md"
categories = ["parsing"]

[dependencies]
lexical = "2.0"
hashbrown = "0.5"
small = { git = "https://gitlab.redox-os.org/redox-os/small", features = ["std"] }
smallvec = "0.6"
itertools = "0.8"
