[package]
name = "types-rs"
version = "0.1.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
edition = "2018"
description = "A type for dynamically typed variables."
license = "MIT"
repository = "https://gitlab.redox-os.org/redox-os/ion"
keywords = ["types", "variables", "dynamic typing", "json"]
readme = "README.md"
categories = ["parsing"]

[dependencies]
lexical = "5.2"
small = { git = "https://gitlab.redox-os.org/redox-os/small", features = ["std"] }
itertools = "0.9"
